k8s/10-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: cc-orch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/kshitijpalsinghtomar/cross-cloud-orchestrator/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cc-orch
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
