k8s/30-analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  namespace: cc-orch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: ghcr.io/kshitijpalsinghtomar/cross-cloud-orchestrator/analytics:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: analytics
  namespace: cc-orch
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
