k8s/40-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: cc-orch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
        - name: monitor
          image: ghcr.io/kshitijpalsinghtomar/cross-cloud-orchestrator/monitor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: monitor
  namespace: cc-orch
spec:
  selector:
    app: monitor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
