k8s/50-health.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-checker
  namespace: cc-orch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-checker
  template:
    metadata:
      labels:
        app: health-checker
    spec:
      containers:
        - name: health-checker
          image: ghcr.io/kshitijpalsinghtomar/cross-cloud-orchestrator/health-checker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: health-checker
  namespace: cc-orch
spec:
  selector:
    app: health-checker
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
