k8s/60-notify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: cc-orch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: ghcr.io/kshitijpalsinghtomar/cross-cloud-orchestrator/notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: cc-orch
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
